--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon src/index.js --exec  babel-node"
+    "dev": "nodemon src/index.js --exec  babel-node",
+    "build":"babel src -d dist",
+    "start": "node dist"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.6",
     "@babel/node": "^7.20.0",
+    "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "nodemon": "^2.0.20"
   }
