--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js --exec  babel-node",
-    "build":"babel src -d dist",
+    "build": "babel src -d dist",
     "start": "node dist"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mssql": "^9.0.1"
   },
